adding link to the chat

--- a/sampling design/scripts/ChatGPT_analysis.html
+++ b/sampling design/scripts/ChatGPT_analysis.html
@@ -1135,6 +1135,8 @@ cluster attributes CSV file</a></p>
 <p><strong>Download the csv file and save it in the
 cluster_interpretation folder</strong> as
 <code>Custer_analysis_from_ChatGPT.csv</code></p>
+<p><a href="https://chatgpt.com/share/6751ada1-e56c-8006-98ce-d1145be7d37e">Link
+to the Chat</a></p>
 </div>
 
 
