--- a/sampling design/scripts/ChatGPT_analysis.html
+++ b/sampling design/scripts/ChatGPT_analysis.html
@@ -355,15 +355,38 @@ display: none;
 </div>
 
 
-<div id="process-for-using-chatgpt-to-interpret-cluster-analysis-classes" class="section level3">
-<h3><strong>Process for Using ChatGPT to Interpret Cluster Analysis
-Classes</strong></h3>
-<p>This guide provides a step-by-step recipe for using ChatGPT to
-interpret cluster analysis classes, as demonstrated in the provided
-example. The process is designed to help soil experts understand
-site-specific characteristics for field visits.</p>
+<div id="process-for-using-chatgpt-to-interpret-cluster-analysis-classes" class="section level1">
+<h1><strong>Process for Using ChatGPT to Interpret Cluster Analysis
+Classes</strong></h1>
+<div id="introduction" class="section level2">
+<h2>Introduction</h2>
+<p>This guide provides a structured, step-by-step approach for using
+ChatGPT to interpret cluster analysis classes of Primary Sampling Units
+(PSUs). It aims to assist soil experts in understanding the specific
+characteristics of sampling sites, facilitating informed decision-making
+during field visits.</p>
+<p>The purpose of this guide is to demonstrate how ChatGPT, or other
+Large Language Models (LLMs), can be used to extract and interpret
+relevant information from environmental covariates used in sampling
+design. By doing so, users can better understand how the sampling
+strategy captures the variability of the landscape.</p>
+<p>It is important to note that the use of ChatGPT in this context
+cannot be fully standardized or automated. Each interaction with the
+model, known as a “prompt,” requires careful supervision by the user. If
+a model’s response is inaccurate or incomplete, the user must revise the
+prompt to include additional information or impose constraints to
+improve the output.</p>
+<p>This guide serves as an example of how to leverage ChatGPT for
+interpreting cluster analyses of PSUs. Users are encouraged to adapt and
+refine the process to suit their specific needs. However, it is critical
+to remember that all model-generated responses must be thoroughly
+reviewed and corrected, if necessary, to ensure accuracy and
+reliability.</p>
 <hr />
 </div>
+</div>
+<div id="prompt-1" class="section level1">
+<h1><strong>Prompt 1</strong></h1>
 <div id="step-1-define-the-purpose" class="section level3">
 <h3><strong>Step 1: Define the Purpose</strong></h3>
 <ul>
@@ -468,7 +491,7 @@ each class.</li>
 are highlighted.</li>
 </ul>
 <hr />
-<p><strong>Prompt 1</strong>:</p>
+<p><strong>Example of Prompt 1</strong>:</p>
 <pre><code>I need to interpret the classes of a cluster analysis and want you to help me to identify what is different from each class of the cluster.
 First let me explain you what is the data from:
 I applied a cluster analysis to 26 soil sampling sites. To classify these sites into classes I used the following environmental variables:
@@ -659,6 +682,7 @@ cluster statistics or observations, please share them, and I’ll assist
 in identifying the unique characteristics of each class.</p>
 <hr />
 </div>
+</div>
 <div id="prompt-2" class="section level1">
 <h1><strong>Prompt 2</strong></h1>
 <ol style="list-style-type: decimal">
@@ -699,6 +723,75 @@ This is the list of variables:
 [16] &quot;dtm_twi_500m_mean&quot;                &quot;dtm_twi_500m_sd&quot;                  &quot;dtm_upslopecurvature_250m_mean&quot;   &quot;dtm_upslopecurvature_250m_sd&quot;     &quot;bio13_mean&quot;                      
 [21] &quot;bio13_sd&quot;                         &quot;bio14_mean&quot;                       &quot;bio14_sd&quot;                         &quot;ndvi_060708_250m_mean_mean&quot;       &quot;ndvi_060708_250m_mean_sd&quot;        
 [26] &quot;ndvi_091011_250m_mean_mean&quot;       &quot;ndvi_091011_250m_mean_sd&quot;         &quot;dtm_elevation_250m_mean&quot;          &quot;dtm_elevation_250m_sd&quot;   </code></pre>
+<p><strong>Result</strong></p>
+<p>Great! With the mean and standard deviation of each variable for each
+cluster, we can systematically characterize the clusters by identifying
+unique patterns, ranges, and heterogeneity. Here’s how we can
+proceed:</p>
+<div id="steps-for-analysis" class="section level3">
+<h3>Steps for Analysis</h3>
+<ol style="list-style-type: decimal">
+<li><strong>Cluster Overview</strong>:
+<ul>
+<li>Group the data by clusters and examine the mean and standard
+deviation for each variable.</li>
+<li>Focus on the variables with notable differences between clusters
+(e.g., high or low means, or low variability).</li>
+</ul></li>
+<li><strong>Homogeneity vs. Heterogeneity</strong>:
+<ul>
+<li>Variables with low standard deviation (<code>_sd</code>) indicate
+homogeneity within the cluster, suggesting uniform conditions.</li>
+<li>High standard deviation indicates heterogeneity, revealing diverse
+conditions within the cluster.</li>
+</ul></li>
+<li><strong>Key Variable Contributions</strong>:
+<ul>
+<li>Identify which variables contribute the most to differentiating the
+clusters. For instance, large differences in
+<code>dtm_elevation_250m_mean</code> or <code>bio13_mean</code> might
+reflect distinct geographic or climatic conditions.</li>
+</ul></li>
+<li><strong>Cluster Characterization</strong>:
+<ul>
+<li>For each cluster, describe its typical conditions (e.g., “Cluster 1
+has high vegetation variability with high
+<code>ndvi_030405_250m_sd_mean</code> and low elevation variability with
+<code>dtm_elevation_250m_sd</code>.”).</li>
+<li>Highlight notable environmental traits based on terrain, vegetation,
+and climate variables.</li>
+</ul></li>
+<li><strong>Cross-Cluster Comparisons</strong>:
+<ul>
+<li>Compare clusters to detect gradients or shifts in environmental
+conditions, such as elevation-driven or precipitation-driven
+patterns.</li>
+</ul></li>
+</ol>
+</div>
+<div id="output-examples" class="section level3">
+<h3>Output Examples</h3>
+<p>For each cluster, we can generate insights like: - <strong>Cluster
+1</strong>: - High <code>ndvi_030405_250m_sd_mean</code> and
+<code>fpar_030405_500m_sd_mean</code>, indicating regions with dynamic
+vegetation patterns. - Moderate <code>bio13_mean</code> and
+<code>bio14_mean</code>, suggesting balanced wet and dry month
+precipitation. - Low <code>dtm_mrn_250m_mean</code>, indicating gentle
+terrain. - <strong>Cluster 2</strong>: - High elevation
+(<code>dtm_elevation_250m_mean</code>) and wetness index
+(<code>dtm_twi_500m_mean</code>), reflecting high-altitude,
+moisture-retaining areas. - Homogeneous vegetation cover
+(<code>grass_sd</code> is low). - Distinctively low
+<code>flooded_vegetation_mean</code>.</p>
+</div>
+<div id="next-steps-1" class="section level3">
+<h3>Next Steps</h3>
+<p>If you share the actual means and standard deviations for the
+clusters, I can: - Generate a summary table comparing clusters. -
+Provide a detailed narrative for each cluster. - Highlight the most
+distinctive environmental features for each cluster.</p>
+<p>Let me know how you’d like to proceed!</p>
+</div>
 </div>
 <div id="prompt-3" class="section level1">
 <h1><strong>Prompt 3</strong></h1>
